<resources>
    <string name="app_name">RealLoad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latitude">위도</string>
    <string name="longitude">경도</string>
    <string name="radio_yesterday">어제</string>
    <string name="radio_today">오늘</string>
    <string name="radio_week">최근 1주</string>
    <string name="radio_custom">기간 지정</string>
    <string name="dialog_create_place_title">새 장소 만들기</string>
    <string name="dialog_create_place_content">해당 위치를 내 장소로 등록하시겠습니까?</string>
    <string name="submit">확인</string>
    <string name="cancel">취소</string>
    <string name="modify">수정</string>
    <string name="search">검색</string>
    <string name="toast_place_not_inputted_text">장소가 입력되지 않았습니다.</string>
    <string name="toast_place_saved">장소가 저장되었습니다.</string>
    <string name="message_permission_listener">위치 정보를 저장하기 위한 권한을 허용해주세요.\n [설정]-[권한]에서 권한을 추가할 수 있습니다.</string>
    <string name="toast_permission_granted">애플리케이션을 사용하기 위한 권한이 허용되어 있습니다.</string>
    <string name="toast_permission_denied">애플리케이션을 사용하기 위한 권한을 허용해주세요.</string>
    <string name="toast_permisssion_background_denied">애플리케이션 사용을 위해 백그라운드 환경에서 위치 정보를 수신할 수 있는 권한이 필요합니다.</string>
    <string name="toast_finish_app">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="toast_network_enabled">네트워크가 불안전하거나 서버로부터 응답을 받을 수 없습니다.</string>
    <string name="toast_send_friend_request">친구 요청을 보냈습니다.</string>
    <string name="toast_friend_added">친구로 등록되었습니다.</string>
    <string name="toast_location_permission_denied">친구로부터 위치 수신 권한을 부여받지 않았습니다.</string>
    <string name="toast_cannot_request_myself">본인에게는 요청을 보낼 수 없습니다.</string>
    <string name="permission_background_guide">앱의 동작을 위해 위치 정보를 항상 수신할 수 있어야 합니다.\n아래 권한 설정에서 백그라운드 위치 수신을 항상 허용으로 설정해주세요. </string>
    <string name="default_notification_channel_id">my_noti_channel</string>
    <string name="push_noti_title_message">푸시 알림 수신</string>
    <string name="push_noti_description_message">지정한 장소로 진입 또는 이탈 시 푸시알림을 수신합니다.</string>
    <string name="stay_condition_title_message">머문 시간 조건 변경</string>
    <string name="stay_condition_description_message">장소를 등록하기 위해 머문 시간에 대한 조건을 변경합니다.</string>
    <string name="distance_condition_title_message">장소 반경 설정</string>
    <string name="distance_condition_description_message">장소에 진입하기, 이탈하기 이벤트를 수신하기 위한 반경 조건을 변경합니다.\n 반경이 너무 작으면 진입, 이탈 이벤트가 빈번히 발생할 수 있고, 반경이 너무 크면 다른 장소를 같은 장소로 인식할 수 있습니다.</string>
    <string name="collect_location_title_message">방문 정보 수집 동의</string>
    <string name="collect_location_description_message">실시간 위치정보, 방문정보 이벤트를 수집하는데 동의합니다. 다른 사용자에게 위치 정보를 알리거나, ...</string>
    <string name="dialog_stay_time_title">등록 시간 조건 변경</string>
    <string name="dialog_distance_title">장소 반경 조건 변경</string>
    <string name="noti_enter_place_description">장소에 진입하였습니다.</string>
    <string name="noti_exit_place_description">장소에서 벗어났습니다.</string>
    <string name="toast_not_enough_required_api_datepicker">API버전이 낮습니다. 추후에 이용 가능합니다.</string>
    <string name="dialog_datepicker_from">시작 날짜</string>
    <string name="dialog_datepicker_to">종료 날짜</string>
    <string name="guide_text_map">지도를 통해 현재 위치를 확인하고 오늘 또는 특정 날짜에 머문 장소를 확인할 수 있습니다.</string>
    <string name="guide_text_visited">이동한 장소에 따라 머문 시간과 함께 장소를 등록했다면 등록정보가, 등록하지 않은 장소라면 위도,경도 정보를 확인할 수 있습니다. </string>
    <string name="guide_text_place">특정 위치에 대한 정보를 수정할 수 있습니다.\n 북마크 추가 시 장소 진입, 이탈 이벤트를 감지하고 푸시알림을 수신할 수 있으며, 특정 장소에 대한 이미지를 저장하고, 지도 화면에서 확인할 수 있습니다.</string>
    <string name="guide_text_setting">푸시 알림 수신, 머문시간, 장소 반경에 대한 설정을 변경할 수 있습니다.</string>
    <string name="checkbox_detail_log">이동 경로 보기</string>
    <string name="toast_gps_not_online">GPS가 활성화 상태일 경우에만 서비스를 이용할 수 있습니다.\n 위치 기능을 활성화해주세요.</string>
    <string name="nav_need_to_login">로그인해주세요.</string>
    <string name="developer_email_address">leein3293@gmail.com</string>
    <string name="realload_report">RealLoad 의견 </string>
    <string name="kakao_app_key">b08101467419ec64891fdbb8ad76e489</string>
    <string name="search_editor_hint">전화번호를 입력해주세요.</string>
    <string name="dialog_friend_info_allowed">내가 친구의 위치를 볼 수 있습니다.(친구가 허용해야 합니다)</string>
    <string name="dialog_friend_info_allow">친구가 내위치를 볼 수 있습니다.</string>
    <string name="dialog_show_friend_info_button">방문 정보</string>
    <string name="button_allow_friend">수락</string>
    <string name="friend_item_waiting_request">친구요청 응답 대기중..</string>
    <string name="text_cannot_find_friend">해당 사용자를 찾을 수 없습니다.\n 애플리케이션을 설치하고 로그인한 회원인지 확인해주세요.</string>
    <string name="text_allow_permission">위 약관에 동의합니다.</string>
    <string name="apiUrl">http://54.180.112.230:8080</string>
    <string name="noti_location_changed">위치 변화가 감지되었습니다.</string>
    <string-array name="splash_strings">
        <item>애플리케이션을 사용하기 위해서는 위치서비스를 백그라운드 환경에서도 접근할 수 있는 권한이 필요합니다.</item>
        <item>이동경로 보기 기능을 사용해보세요. 오늘 움직인 이동경로를 확인할 수 있습니다.</item>
        <item>같은 번호를 가진 이동 경로가 있나요? 100번 이상의 이동경로는 앞의 두자리까지만 표시됩니다.</item>
        <item>내 장소에 이미지를 추가해보세요. 진입한 장소를 확인할 때 장소 이미지를 확인할 수 있습니다.</item>
        <item>장소를 북마크에 추가하면 장소 진입, 이탈 시 알림 이벤트를 수신할 수 있습니다.</item>
        <item>장소 등록이 원할하게 이루어지지 않나요? 나에게 맞는 머문시간, 장소반경을 설정해보세요.</item>
        <item>기간을 지정해서 장소를 설정할 경우, 시작날짜와 종료날짜 순서대로 날짜를 지정할 수 있습니다.</item>
        <item>내 장소로 지정하기 위해서는 먼저 해당 장소에 방문해야합니다.</item>
    </string-array>
    <array name="array_stay_time">
        <item>"10분"</item>
        <item>"20분"</item>
        <item>"30분"</item>
        <item>"1시간"</item>
        <item>"2시간"</item>
    </array>
    <array name="array_distance">
        <item>"10m"</item>
        <item>"20m"</item>
        <item>"30m"</item>
        <item>"40m"</item>
        <item>"50m"</item>
    </array>
    <string name="agreement">제 1 조 (목적)\n
이 약관은 MyHome.corp (이하 “회사”)가 제공하는 위치정보사업 또는 위치기반서비스사업과 관련하여 회사와 개인위치정보주체와의 권리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.\n\n

제 2 조 (약관 외 준칙)\n
이 약관에 명시되지 않은 사항은 위치정보의 보호 및 이용 등에 관한 법률, 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 전기통신기본법, 전기통신사업법 등 관계법령과 회사의 이용약관 및 개인정보처리방침, 회사가 별도로 정한 지침 등에 의합니다.\n\n

제 3 조 (서비스 내용 및 요금)\n
①회사는 직접 위치정보를 수집하거나 위치정보사업자로부터 위치정보를 전달받아 아래와 같은 위치기반서비스를 제공합니다.\n
1.Geofencing 서비스: 개인위치정보주체 또는 이동성 있는 기기의 위치정보가 사용자 정보와 함께 저장됩니다.\n
2.위치정보를 활용한 친구찾기 및 친구맺기: 현재 위치를 활용하여 친구를 찾아주거나 친구를 추천하여 줍니다.\n
3.연락처 교환하기: 위치정보를 활용하여 친구와 연락처를 교환할 수 있으며, 연락처 정보를 통해 친구를 조회할 수 있습니다.\n
4.이용자 위치를 활용한 광고정보 제공: 검색결과 또는 기타 서비스 이용 과정에서 개인위치정보주체 또는 이동성 있는 기기의 위치를 이용하여 광고소재를 제시합니다.\n
5.이용자 보호 및 부정 이용 방지: 개인위치정보주체 또는 이동성 있는 기기의 위치를 이용하여 권한없는 자의 비정상적인 서비스 이용 시도 등을 차단합니다.\n
6.위치정보 공유: 개인위치정보주체 또는 이동성 있는 기기의 위치정보를 안심귀가 등을 목적으로 지인 또는 개인위치정보주체가 지정한 제3자에게 공유합니다.n\n

②제1항 위치기반서비스의 이용요금은 무료입니다.\n
제 4 조 (개인위치정보주체의 권리)\n
①개인위치정보주체는 개인위치정보 수집 범위 및 이용약관의 내용 중 일부 또는 개인위치정보의 이용ㆍ제공 목적, 제공받는 자의 범위 및\n
위치기반서비스의 일부에 대하여 동의를 유보할 수 있습니다.\n
②개인위치정보주체는 개인위치정보의 수집ㆍ이용ㆍ제공에 대한 동의의 전부 또는 일부를 철회할 수 있습니다.\n
③개인위치정보주체는 회사에 대하여 아래 자료의 열람 또는 고지를 요구할 수 있고, 당해 자료에 오류가 있는 경우에는 그 정정을 요구할 수 있습니다.\n
이 경우 회사는 정당한 이유 없이 요구를 거절하지 아니합니다.\n
1.개인위치정보주체에 대한 위치정보 수집ㆍ이용ㆍ제공사실 확인자료\n
2.개인위치정보주체의 개인위치정보가 위치정보의 보호 및 이용 등에 관한 법률 또는 다른 법령의 규정에 의하여 제3자에게 제공된 이유 및 내용\n
④회사는 개인위치정보주체가 동의의 전부 또는 일부를 철회한 경우에는 지체 없이 수집된 개인위치정보 및 위치정보 수집ㆍ이용ㆍ제공사실 확인자료를 파기합니다.\n
단, 동의의 일부를 철회하는 경우에는 철회하는 부분의 개인위치정보 및 위치정보 수집ㆍ이용ㆍ제공사실 확인자료에 한합니다.\n
⑤개인위치정보주체는 제1항 내지 제3항의 권리행사를 위하여 이 약관 제13조의 연락처를 이용하여 회사에 요구할 수 있습니다.\n\n

제 5 조 (위치정보 이용ㆍ제공사실 확인자료 보유근거 및 보유기간)\n
회사는 위치정보의 보호 및 이용 등에 관한 법률 제16조 제2항에 근거하여 개인위치정보주체에 대한 위치정보 수집ㆍ이용ㆍ제공사실 확인자료를 위치정보시스템에\n
자동으로 기록하며, 6개월 이상 보관합니다.\n\n

제 6 조 (서비스의 변경 및 중지)\n
①회사는 위치정보사업자의 정책변경 등과 같이 회사의 제반 사정 또는 법률상의 장애 등으로 서비스를 유지할 수 없는 경우, 서비스의 전부 또는 일부를
제한, 변경하거나 중지할 수 있습니다.\n
②제1항에 의한 서비스 중단의 경우에는 회사는 사전에 인터넷 등에 공지하거나 개인위치정보주체에게 통지합니다.\n\n

제 7 조 (개인위치정보 제3자 제공시 즉시 통보)\n
①회사는 개인위치정보주체의 동의 없이 당해 개인위치정보주체의 개인위치정보를 제3자에게 제공하지 아니하며, 제3자 제공 서비스를 제공하는 경우에는
제공 받는 자 및 제공목적을 사전에 개인위치정보주체에게 고지하고 동의를 받습니다.\n
②회사는 개인위치정보를 개인위치정보주체가 지정하는 제3자에게 제공하는 경우에는 개인위치정보를 수집한 당해 통신단말장치로 매회 개인위치정보주체에게\n
제공받는 자, 제공일시 및 제공목적을 즉시 통보합니다.\n
③다만, 아래에 해당하는 경우에는 개인위치정보주체가 미리 특정하여 지정한 통신단말장치 또는 전자우편주소 등으로 통보합니다.\n
1.개인위치정보를 수집한 당해 통신단말장치가 문자, 음성 또는 영상의 수신기능을 갖추지 아니한 경우\n
2.개인위치정보주체가 개인위치정보를 수집한 당해 통신단말장치 외의 통신단말장치 또는 전자우편주소 등으로 통보할 것을 미리 요청한 경우\n\n

제 8 조 (사업자 정보)\n
회사의 상호, 주소, 전화번호 그 밖의 연락처는 다음과 같습니다.\n
상호: MyHome.corp\n
이메일 주소: leein3293@gmail.com</string>
</resources>
