<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.MapFragment">
    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.myhome.realload.viewmodel.MapViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="4dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_yesterday"
            android:padding="4dp"
            android:onClick="@{() -> model.onClickYesterday()}"/>
        <RadioButton
            android:id="@+id/today_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_today"
            android:padding="4dp"
            android:onClick="@{() -> model.onClickToday()}"/>
        <RadioButton
            android:id="@+id/week_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_week"
            android:padding="4dp"
            android:onClick="@{() -> model.onClickWeek()}"/>
        <RadioButton
            android:id="@+id/custom_date_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_custom"
            android:padding="4dp"
            android:onClick="@{() -> model.onClickCustom()}"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/checkbox_detail_log"
        android:onClick="@{() -> model.placeLog()}"
        android:checked="@{model.logChecked}"/>

    <LinearLayout
        android:id="@+id/custom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        android:orientation="horizontal"
        android:visibility="@{model.period == 2?View.VISIBLE:View.GONE}">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@{model.customDateFrom}"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="~"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@{model.customDateTo}"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="4dp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/custom_container"
        app:layout_constraintBottom_toTopOf="@id/adView"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"/>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3136625326865731/3840027411">
    </com.google.android.gms.ads.AdView>
<!--        bind_map="@{model.callback}"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>