<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.myhome.realload.viewmodel.SettingViewModel" />
    </data>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SettingFragment">
    
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/textlines"
                android:layout_margin="12dp">
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/push_noti_title_message"
                    android:padding="4dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/underline"
                    android:checked="@{model.pushObservableField}"
                    android:onClick="@{() -> model.onClickPush()}"
                    android:button="@null"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/push_noti_description_message"
                    android:padding="4dp"
                    android:layout_margin="4dp"/>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/textlines"
                android:layout_margin="12dp">
                <TextView
                    android:id="@+id/stay_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/stay_condition_title_message"
                    android:padding="8dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/underline"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:padding="8dp"
                    android:layout_margin="4dp"
                    android:text="@{model.stayConditionText}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/stay_title"
                    android:text="@string/stay_condition_description_message"
                    android:padding="4dp"
                    android:layout_margin="4dp"
                    android:onClick="@{() -> model.onClickStayCondition()}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/textlines"
                android:layout_margin="12dp">
                <TextView
                    android:id="@+id/distance_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/distance_condition_title_message"
                    android:padding="8dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/underline"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:padding="8dp"
                    android:layout_margin="4dp"
                    android:text="@{model.distanceConditionText}"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/distance_title"
                    android:text="@string/distance_condition_description_message"
                    android:padding="4dp"
                    android:layout_margin="4dp"
                    android:onClick="@{() -> model.onClickDistanceCondition()}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            <TextView-->
<!--                android:id="@+id/log"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"/>-->
        </LinearLayout>
    </ScrollView>
</layout>