<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.myhome.realload.viewmodel.dialog.FriendInfoViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_account_circle_gray_24dp"
        bind_image="@{model.friend.profileUrl}"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/profile_img"
        app:layout_constraintLeft_toRightOf="@id/profile_img"
        android:text="@={model.friend.nickName}"
        android:layout_margin="8dp"/>
    <CheckBox
        android:id="@+id/allowed_permission_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_img"
        android:checked="@{model.allowedPermission}"
        android:text="@string/dialog_friend_info_allowed"
        />
    <CheckBox
        android:id="@+id/allow_permission_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/allowed_permission_cb"
        android:checked="@{model.allowPermission}"
        android:onClick="@{() -> model.checkAllowButton()}"
        android:text="@string/dialog_friend_info_allow"
        />

    <Button
        android:id="@+id/show_location_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/allow_permission_cb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="@{() -> model.showFriendVisitedInfo()}"
        android:text="@string/dialog_show_friend_info_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>