<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.myhome.realload.viewmodel.adapterviewmodel.PlaceRecyclerViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/underline"
    android:padding="4dp"
    android:onClick="@{() -> model.clicked()}">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="4dp"
        android:text="@{model.place.name}"
        android:onClick="@{() -> model.clicked()}"
        />
    <TextView
        android:id="@+id/latitude_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="4dp"
        android:text="@string/latitude"
        android:onClick="@{() -> model.clicked()}"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toRightOf="@id/latitude_tv"
        android:padding="4dp"
        bind_text="@{model.place.latitude}"
        android:onClick="@{() -> model.clicked()}"/>
    <TextView
        android:id="@+id/longitude_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/latitude_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="4dp"
        android:text="@string/longitude"
        android:onClick="@{() -> model.clicked()}"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/latitude_tv"
        app:layout_constraintLeft_toRightOf="@id/longitude_tv"
        android:padding="4dp"
        bind_text="@{model.place.longitude}"
        android:onClick="@{() -> model.clicked()}"/>
    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="4dp"
        bind_image="@{model.place.favorite}"
        android:onClick="@{() -> model.favorite()}"/>
    <com.myhome.siviewpager.SIViewPager
        android:id="@+id/siviewpager"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/longitude_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        bind_images="@{model.myImages}"
        bind_listener="@{model.listenerObserver}"
        bind_place="@{model.placeObserver}"
        bind_modifying="@{model.isModifying}"
        android:visibility="@{model.viewPagerType==0?View.GONE:View.VISIBLE}"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:background="@drawable/textlines"
        app:layout_constraintTop_toBottomOf="@id/siviewpager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="@{model.viewPagerType==1?View.VISIBLE:View.GONE}"
        android:onClick="@{() -> model.modify()}"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/textlines"
        app:layout_constraintTop_toBottomOf="@id/siviewpager"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="@{model.viewPagerType==2?View.VISIBLE:View.GONE}"
        android:onClick="@{() -> model.submit()}"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>